# HydraGen

./: CMakeLists.txt  README.md  binder.py  bindings.conf  bindings.h  dom.py  gen.py  h2core_module.cpp  h2core_module.hpp  module.cpp  module.hpp  named.h  ns_test.h  setup.cfg  setup.py  test.py  test_SongPlay.py  test_qstring.cpp  test_qstring.h  walk.py
examples/: Hydra.ipynb  crash_test.py  h2core.yaml  singleton.h  test_SongPlay.py  test_qstring.cpp
hydra/: conf.py  dom.py  gen.py  main.py  walk.py
typings/clang/: cindex.pyi
typings/orderedset/: __init__.pyi
