[metadata]
name = hydragen
version = 0.1.0
description = HydraGen C++ Python bindings generator
keywords = binding, generator, c++
classifiers =
    Intended Audience :: Developpers
    Programming Language :: Python :: 3
    Topic :: Sofware Development


[otions]
include_package_data = True
packages = hydra
install_requires =
    logzero
    clang
    orderedset
    PyYAML

[options.package_data]
include = *.h, *.hpp

[options.entry_points]
console_scripts =
    hydragen = hydra.gen:main

[otions.data_files]
/usr/include/hydragen =
    include/qtreset.h
    include/qtcasters.h

